provided Helm configuration for configuring indexedFields for namespaces
* consolidated config keys to be more intuitive

Signed-off-by: Thomas Jäckle <thomas.jaeckle@beyonnex.io>